Optimize GitHub workflows caching

--- a/.github/workflows/ci-deploy-dc.yml
+++ b/.github/workflows/ci-deploy-dc.yml
@@ -16,6 +16,15 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
+      - name: Cache Deno dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/deno
+            ~/.deno
+          key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-deno-
       - name: CI (fmt/lint/typecheck/test)
         run: bash scripts/ci.sh
         continue-on-error: true
