--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -12,6 +12,15 @@ jobs:
       - uses: actions/checkout@v4
       - uses: denoland/setup-deno@v1
         with: { deno-version: v1.x }
+      - name: Cache Deno dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/deno
+            ~/.deno
+          key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-deno-
       - name: Run unit + integration tests
         env:
           # Optional: enable integration smoke if provided at repo/CI level
@@ -24,8 +33,10 @@ jobs:
     if: ${{ github.event_name == 'push' || github.event.pull_request.merged == false }}
     steps:
       - uses: actions/checkout@v4
-      - name: Supabase CLI
-        run: npm i -g supabase
+      - name: Setup Supabase CLI
+        uses: supabase/setup-cli@v1
+        with:
+          version: latest
       - name: List required edge secrets
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
