Refine workflow caching and Supabase setup

--- a/.github/workflows/ci-deploy-dc.yml
+++ b/.github/workflows/ci-deploy-dc.yml
@@ -22,8 +22,9 @@ jobs:
           path: |
             ~/.cache/deno
             ~/.deno
-          key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}
+          key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock', 'deno.json') }}
           restore-keys: |
+            ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}-
             ${{ runner.os }}-deno-
       - name: CI (fmt/lint/typecheck/test)
         run: bash scripts/ci.sh
