--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -18,8 +18,9 @@ jobs:
           path: |
             ~/.cache/deno
             ~/.deno
-          key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}
+          key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock', 'deno.json') }}
           restore-keys: |
+            ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}-
             ${{ runner.os }}-deno-
       - name: Run unit + integration tests
         env:
@@ -36,7 +37,7 @@ jobs:
       - name: Setup Supabase CLI
         uses: supabase/setup-cli@v1
         with:
-          version: latest
+          version: 2.48.3
       - name: List required edge secrets
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
