--- a/.github/workflows/ci-deploy-dc.yml
+++ b/.github/workflows/ci-deploy-dc.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           deno-version: v1.x
       - name: Cache Deno dependencies
+        id: deno-cache
         uses: actions/cache@v4
         with:
           path: |
@@ -26,6 +27,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}-
             ${{ runner.os }}-deno-
+      - name: Report Deno cache status
+        env:
+          CACHE_HIT: ${{ steps.deno-cache.outputs.cache-hit }}
+        run: |
+          echo "Deno cache hit: ${CACHE_HIT:-false}"
+          {
+            echo "### CI Deploy DC cache";
+            echo "- Cache hit: \`${CACHE_HIT:-false}\`";
+          } >> "$GITHUB_STEP_SUMMARY"
       - name: CI (fmt/lint/typecheck/test)
         run: bash scripts/ci.sh
         continue-on-error: true
