--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: denoland/setup-deno@v1
         with: { deno-version: v1.x }
       - name: Cache Deno dependencies
+        id: deno-cache
         uses: actions/cache@v4
         with:
           path: |
@@ -22,6 +23,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}-
             ${{ runner.os }}-deno-
+      - name: Report Deno cache status
+        env:
+          CACHE_HIT: ${{ steps.deno-cache.outputs.cache-hit }}
+        run: |
+          echo "QA deno cache hit: ${CACHE_HIT:-false}"
+          {
+            echo "### QA cache";
+            echo "- Deno cache hit: \`${CACHE_HIT:-false}\`";
+          } >> "$GITHUB_STEP_SUMMARY"
       - name: Run unit + integration tests
         env:
           # Optional: enable integration smoke if provided at repo/CI level
@@ -38,6 +48,14 @@ jobs:
         uses: supabase/setup-cli@v1
         with:
           version: 2.48.3
+      - name: Verify Supabase CLI version
+        run: |
+          version="$(supabase --version)"
+          echo "Supabase CLI ${version}"
+          {
+            echo "### Supabase CLI";
+            echo "- Version: \`${version}\`";
+          } >> "$GITHUB_STEP_SUMMARY"
       - name: List required edge secrets
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
