--- a/.github/workflows/ci-deploy-dc.yml
+++ b/.github/workflows/ci-deploy-dc.yml
@@ -16,6 +16,29 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
+      - name: Cache Deno dependencies
+        id: deno-cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/deno
+            ~/.deno
+          key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock', 'deno.json') }}
+          restore-keys: |
+            ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}-
+            ${{ runner.os }}-deno-
+      - name: Report Deno cache status
+        env:
+          CACHE_HIT: ${{ steps.deno-cache.outputs.cache-hit }}
+        run: |
+          echo "Deno cache hit: ${CACHE_HIT:-false}"
+          summary_file="${GITHUB_STEP_SUMMARY:-}"
+          if [ -n "${summary_file}" ]; then
+            {
+              echo "### CI Deploy DC cache";
+              echo "- Cache hit: \`${CACHE_HIT:-false}\`";
+            } >> "${summary_file}"
+          fi
       - name: CI (fmt/lint/typecheck/test)
         run: bash scripts/ci.sh
         continue-on-error: true
