--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -12,6 +12,29 @@ jobs:
       - uses: actions/checkout@v4
       - uses: denoland/setup-deno@v1
         with: { deno-version: v1.x }
+      - name: Cache Deno dependencies
+        id: deno-cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/deno
+            ~/.deno
+          key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock', 'deno.json') }}
+          restore-keys: |
+            ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}-
+            ${{ runner.os }}-deno-
+      - name: Report Deno cache status
+        env:
+          CACHE_HIT: ${{ steps.deno-cache.outputs.cache-hit }}
+        run: |
+          echo "QA deno cache hit: ${CACHE_HIT:-false}"
+          summary_file="${GITHUB_STEP_SUMMARY:-}"
+          if [ -n "${summary_file}" ]; then
+            {
+              echo "### QA cache";
+              echo "- Deno cache hit: \`${CACHE_HIT:-false}\`";
+            } >> "${summary_file}"
+          fi
       - name: Run unit + integration tests
         env:
           # Optional: enable integration smoke if provided at repo/CI level
@@ -21,11 +44,24 @@ jobs:
 
   edge-secrets-audit:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' || github.event.pull_request.merged == false }}
+    if: ${{ github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false) }}
     steps:
       - uses: actions/checkout@v4
-      - name: Supabase CLI
-        run: npm i -g supabase
+      - name: Setup Supabase CLI
+        uses: supabase/setup-cli@v1
+        with:
+          version: 2.48.3
+      - name: Verify Supabase CLI version
+        run: |
+          version="$(supabase --version)"
+          echo "Supabase CLI ${version}"
+          summary_file="${GITHUB_STEP_SUMMARY:-}"
+          if [ -n "${summary_file}" ]; then
+            {
+              echo "### Supabase CLI";
+              echo "- Version: \`${version}\`";
+            } >> "${summary_file}"
+          fi
       - name: List required edge secrets
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
