--- a/.github/workflows/ci-deploy-dc.yml
+++ b/.github/workflows/ci-deploy-dc.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
+    outputs:
+      deno_cache_hit: ${{ steps.deno-cache-telemetry.outputs.cache_hit }}
     env:
       DENO_TLS_CA_STORE: system
     steps:
@@ -16,6 +18,35 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
+      - name: Cache Deno dependencies
+        id: deno-cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/deno
+            ~/.deno
+          key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock', 'deno.json') }}
+          restore-keys: |
+            ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}-
+            ${{ runner.os }}-deno-
+      - name: Report Deno cache status
+        if: ${{ always() }}
+        id: deno-cache-telemetry
+        env:
+          CACHE_HIT: ${{ steps.deno-cache.outputs.cache-hit }}
+        run: |
+          cache_hit="${CACHE_HIT:-false}"
+          echo "Deno cache hit: ${cache_hit}"
+          echo "cache_hit=${cache_hit}" >> "$GITHUB_OUTPUT"
+          summary_file="${GITHUB_STEP_SUMMARY:-}"
+          if [ -n "${summary_file}" ]; then
+            {
+              echo "### CI Deploy DC cache";
+              echo "- Event: \`${GITHUB_EVENT_NAME:-unknown}\`";
+              echo "- Ref: \`${GITHUB_REF_NAME:-unknown}\`";
+              echo "- Cache hit: \`${cache_hit}\`";
+            } >> "${summary_file}"
+          fi
       - name: CI (fmt/lint/typecheck/test)
         run: bash scripts/ci.sh
         continue-on-error: true
