--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,7 @@ bun.lockb
 .project-cache/
 # Python bytecode cache directories
 __pycache__/
+dynamic-capital-ton/build/
 apps/web/public/apple-touch-icon.png
 apps/web/public/icon-mark-512.png
 apps/web/public/favicon.ico
