feat: add hugging face inference provider

--- a/.env.example
+++ b/.env.example
@@ -139,6 +139,10 @@ OPENAI_WEBHOOK_SECRET=
 OPENAI_ENABLED=false
 ANTHROPIC_API_KEY=
 GROQ_API_KEY=
+HUGGINGFACE_ACCESS_TOKEN=
+# Optional overrides for the default Hugging Face model and endpoint
+HUGGINGFACE_CHAT_MODEL=
+HUGGINGFACE_CHAT_URL=
 FAQ_ENABLED=false
 DYNAMIC_AI_CHAT_URL=
 DYNAMIC_AI_CHAT_KEY=
