Document Hugging Face token alias and expand provider tests

--- a/.env.example
+++ b/.env.example
@@ -140,6 +140,8 @@ OPENAI_ENABLED=false
 ANTHROPIC_API_KEY=
 GROQ_API_KEY=
 HUGGINGFACE_ACCESS_TOKEN=
+# Legacy alias also supported for the Hugging Face provider
+HUGGINGFACE_API_KEY=
 # Optional overrides for the default Hugging Face model and endpoint
 HUGGINGFACE_CHAT_MODEL=
 HUGGINGFACE_CHAT_URL=
