--- a/tests_python/requirements.txt
+++ b/tests_python/requirements.txt
@@ -1,2 +1,6 @@
 # Dependencies required to execute the Python test suite locally.
-torch>=2.8
+# Use the PyTorch CPU wheels to avoid large CUDA downloads during local setup.
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+# Match the version used in CI tooling and ensure deterministic installs.
+torch==2.4.1+cpu
