--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,3 +74,24 @@ jobs:
       - name: Test
         if: steps.script-flags.outputs.test != 'undefined'
         run: npm run test 2>&1 | tee test.log
+
+  python-tests:
+    name: Python GPT regression tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install Python test requirements
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r tests_python/requirements.txt
+          pip install pytest
+
+      - name: Run GPT regression suite
+        run: pytest tests_python/test_dynamic_gpt_model.py
