--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,11 +87,18 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('tests_python/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install Python test requirements
         run: |
           python -m pip install --upgrade pip
           pip install -r tests_python/requirements.txt
-          pip install pytest
 
       - name: Run GPT regression suite
         run: pytest tests_python/test_dynamic_gpt_model.py
