--- a/tests_python/requirements.txt
+++ b/tests_python/requirements.txt
@@ -4,3 +4,6 @@
 
 # Match the version used in CI tooling and ensure deterministic installs.
 torch==2.4.1+cpu
+
+# Test runner pinned to guarantee consistent behaviour between local and CI runs.
+pytest==8.3.3
