--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -1,4 +1,8 @@
+agno>=2.1.1
+autogen>=0.9.10
+crewai>=0.201.1
 huggingface_hub>=0.35.3
+langchain>=0.3.27
 langgraph>=0.6.8
 pyarrow>=15.0.0
 PyPDF2>=3.0.0
