--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,15 +24,15 @@
     "@mdx-js/loader": "^3.0.1",
     "@next/mdx": "^15.5.4",
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/api-logs": "0.57.1",
-    "@opentelemetry/exporter-prometheus": "^0.57.1",
-    "@opentelemetry/instrumentation": "0.57.1",
-    "@opentelemetry/instrumentation-fetch": "^0.57.1",
-    "@opentelemetry/instrumentation-http": "^0.57.1",
-    "@opentelemetry/resources": "^1.27.0",
-    "@opentelemetry/sdk-logs": "^0.57.1",
-    "@opentelemetry/sdk-metrics": "^1.27.0",
-    "@opentelemetry/semantic-conventions": "^1.27.0",
+    "@opentelemetry/api-logs": "^0.206.0",
+    "@opentelemetry/exporter-prometheus": "^0.206.0",
+    "@opentelemetry/instrumentation": "^0.206.0",
+    "@opentelemetry/instrumentation-fetch": "^0.206.0",
+    "@opentelemetry/instrumentation-http": "^0.206.0",
+    "@opentelemetry/resources": "^2.1.0",
+    "@opentelemetry/sdk-logs": "^0.206.0",
+    "@opentelemetry/sdk-metrics": "^2.1.0",
+    "@opentelemetry/semantic-conventions": "^1.37.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -65,9 +65,9 @@
     "@sentry/nextjs": "^8.55.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.58.0",
+    "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.90.2",
-    "@vercel/otel": "^1.13.0",
+    "@vercel/otel": "^2.0.1",
     "@web3-onboard/bitget": "^2.1.1",
     "@web3-onboard/common": "^2.4.2",
     "@web3-onboard/core": "^2.24.1",
