docs: document node configuration env vars

--- a/.env.example
+++ b/.env.example
@@ -177,6 +177,16 @@ ONEDRIVE_CLIENT_SECRET=
 ONEDRIVE_SCOPE=https://graph.microsoft.com/.default
 ONEDRIVE_DEFAULT_DRIVE_ID=
 
+# Node orchestration overrides
+NODE_CONFIG__HUMAN_ANALYSIS={"node_id":"human-analysis","type":"processing","enabled":true,"interval_sec":21600,"dependencies":[],"outputs":["fusion"],"metadata":{"source":"analyst_insights"},"weight":0.25}
+NODE_CONFIG__DYNAMIC_HEDGE={"node_id":"dynamic-hedge","type":"policy","enabled":true,"interval_sec":300,"dependencies":["trades","correlations","risk_settings"],"outputs":["hedge_actions","signals"],"metadata":{"description":"Dynamic hedge model evaluating volatility, drawdown, and news triggers","confidence":0.9},"weight":0.9}
+NODE_CONFIG__TON_NETWORK_HEALTH={"node_id":"ton-network-health","type":"ingestion","enabled":true,"interval_sec":120,"dependencies":[],"outputs":["ton_network_metrics"],"metadata":{"description":"Poll validator RPC endpoints for block lag, peers, and resource telemetry.","dashboards":["grafana:TON/Node","grafana:TON/Storage"],"alert_routes":["pagerduty:on-call","slack:#ton-ops"]},"weight":0.6}
+NODE_CONFIG__TON_LIQUIDITY_INGESTION={"node_id":"ton-liquidity-ingestion","type":"ingestion","enabled":true,"interval_sec":300,"dependencies":["ton_network_metrics"],"outputs":["ton_liquidity_curves"],"metadata":{"description":"Ingest DEX pool depth and fee telemetry from STON.fi and DeDust.","venues":["stonfi","dedust"]},"weight":0.5}
+NODE_CONFIG__TON_WALLET_AUDIT={"node_id":"ton-wallet-audit","type":"processing","enabled":true,"interval_sec":600,"dependencies":["ton_network_metrics"],"outputs":["ton_wallet_balances"],"metadata":{"description":"Reconcile treasury and operations wallets against Supabase tx logs.","supabase_tables":["tx_logs","wallet_limits"]},"weight":0.4}
+NODE_CONFIG__TON_FEATURE_ENGINEER={"node_id":"ton-feature-engineer","type":"processing","enabled":true,"interval_sec":900,"dependencies":["ton_liquidity_curves","ton_network_metrics","ton_wallet_balances"],"outputs":["ton_feature_windows"],"metadata":{"description":"Transform raw TON telemetry into modelling features and rolling aggregates.","feature_windows":["1h","6h","24h"]},"weight":0.7}
+NODE_CONFIG__TON_EXECUTION_PLANNER={"node_id":"ton-execution-planner","type":"policy","enabled":true,"interval_sec":600,"dependencies":["ton_feature_windows"],"outputs":["ton_execution_actions","ton_alerts"],"metadata":{"description":"Run DynamicTonEngine to propose liquidity and treasury actions.","playbooks":["docs/ton-node-monitoring.md","docs/ton-infrastructure-config.md"]},"weight":0.9}
+NODE_CONFIG__TON_OPS_BRIEFING={"node_id":"ton-ops-briefing","type":"community","enabled":true,"interval_sec":3600,"dependencies":["ton_execution_actions","ton_alerts"],"outputs":["ton_ops_digest"],"metadata":{"description":"Summarise TON actions and alerts for operations handovers.","channels":["notion:runbook","slack:#ops-daily"]},"weight":0.3}
+
 # Optional overrides for integration tests and provisioning scripts
 FUNCTIONS_BASE=
 FUNCTIONS_BASE_URL=
