--- a/apps/web/public/tonconnect-manifest.json
+++ b/apps/web/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://dynamic-capital-qazf2.ondigitalocean.app",
+  "url": "https://dynamic.capital",
   "name": "Dynamic Capital",
-  "iconUrl": "https://dynamic-capital-qazf2.ondigitalocean.app/icon-mark.svg"
+  "iconUrl": "https://dynamic.capital/icon-mark.svg"
 }
