--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@upstash/redis": "^1.35.4",
     "@web3-onboard/common": "^2.4.2",
     "@web3-onboard/core": "^2.24.1",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "compressorjs": "^1.2.1",
     "framer-motion": "^12.23.22",
@@ -114,6 +115,9 @@
     "prismjs": "^1.30.0",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
+    "ton": "^13.9.0",
+    "ton-core": "^0.53.0",
+    "ton-crypto": "^3.2.0",
     "undici": "^6.22.0"
   },
   "devDependencies": {
