--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -25,6 +25,9 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "@shared/*": [
+        "../../shared/*"
       ]
     },
     "incremental": true,
