--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "apps/*"
   ],
   "engines": {
-    "node": "^22"
+    "node": ">=20 <23"
   },
   "scripts": {
     "build": "node scripts/npm-safe.mjs run build:web && node scripts/npm-safe.mjs run build:landing",
