Refine npm script chaining

--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "node": "^22"
   },
   "scripts": {
-    "build": "node scripts/npm-safe.mjs run build:web && node scripts/npm-safe.mjs run build:landing",
+    "build": "npm run build:web && npm run build:landing",
     "build:tooling": "node scripts/build-tooling.mjs",
     "build:landing": "node scripts/npm-safe.mjs -w apps/landing run build",
     "build:web": "node scripts/npm-safe.mjs -w apps/web run build",
     "build:dynamic-ai": "node scripts/dynamic-ai-phased-build.mjs",
     "build:miniapp": "bash scripts/build-miniapp.sh",
     "build:dev": "vite build --mode development",
-    "start": "node scripts/npm-safe.mjs -w apps/web run start",
+    "start": "npm run start:web",
     "start:web": "node scripts/npm-safe.mjs -w apps/web run start",
     "start:do": "HOST=0.0.0.0 HOSTNAME=0.0.0.0 NODE_ENV=production node apps/web/.next/standalone/apps/web/server.js",
     "dev": "node scripts/npm-safe.mjs -w apps/web run dev --",
@@ -32,9 +32,9 @@
     "typecheck": "node scripts/npm-safe.mjs -w apps/web run typecheck",
     "review": "python -m pytest algorithms/python/tests/test_review_and_optimize.py",
     "debug": "NODE_OPTIONS='--inspect' node scripts/npm-safe.mjs run dev",
-    "preview": "node scripts/npm-safe.mjs run dev",
+    "preview": "npm run dev",
     "upload-assets": "node scripts/upload-assets.js",
-    "upload-assets:watch": "chokidar '_static/**/*' -c 'node scripts/npm-safe.mjs run upload-assets'",
+    "upload-assets:watch": "chokidar '_static/**/*' -c 'npm run upload-assets'",
     "docs:summary": "deno run -A scripts/generate-repo-summary.ts",
     "docs:toc": "tsx scripts/docs/update-toc.ts README.md docs/dynamic-capital-playbook.md docs/dynamic-capital-wisdom-playbook.md docs/api-documentation.md",
     "docs:organize": "$(bash scripts/deno_bin.sh) run -A scripts/repo-file-organizer.ts",
@@ -67,7 +67,7 @@
     "checklists": "node scripts/run-checklists.js",
     "go-live": "node scripts/run-checklists.js --checklist go-live",
     "go-live--dry-run": "node scripts/run-checklists.js --checklist go-live --dry-run",
-    "export": "node scripts/npm-safe.mjs run build",
+    "export": "npm run build",
     "output": "node scripts/npm-safe.mjs -w apps/web run copy-static",
     "supabase:start": "supabase start",
     "supabase:stop": "supabase stop",
