Organize npm scripts by workflow

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "node": ">=20 <23"
   },
   "scripts": {
+    "audit": "npm audit",
+    "audit:fix": "npm audit fix",
+
     "build": "node scripts/npm-safe.mjs run build:web && node scripts/npm-safe.mjs run build:landing",
     "build:tooling": "node scripts/build-tooling.mjs",
     "build:landing": "node scripts/npm-safe.mjs -w apps/landing run build",
@@ -17,31 +20,38 @@
     "build:dynamic-ai": "node scripts/dynamic-ai-phased-build.mjs",
     "build:miniapp": "bash scripts/build-miniapp.sh",
     "build:dev": "vite build --mode development",
+    "export": "node scripts/npm-safe.mjs run build",
+
     "start": "node scripts/npm-safe.mjs -w apps/web run start",
     "start:web": "node scripts/npm-safe.mjs -w apps/web run start",
     "start:do": "HOST=0.0.0.0 HOSTNAME=0.0.0.0 NODE_ENV=production node apps/web/.next/standalone/apps/web/server.js",
+
     "dev": "node scripts/npm-safe.mjs -w apps/web run dev --",
     "dev:lovable": "node lovable-dev.js",
+    "debug": "NODE_OPTIONS='--inspect' node scripts/npm-safe.mjs run dev",
+    "preview": "node scripts/npm-safe.mjs run dev",
+
+    "lint": "node scripts/npm-safe.mjs -w apps/web run lint",
+    "format": "deno fmt apps supabase scripts db docs",
+    "typecheck": "node scripts/npm-safe.mjs -w apps/web run typecheck",
+    "review": "python -m pytest algorithms/python/tests/test_review_and_optimize.py",
+    "test": "node scripts/check-static-homepage.js && deno test --sloppy-imports --no-lock --no-npm --node-modules-dir=false --unsafely-ignore-certificate-errors -A --no-check",
+    "verify": "bash scripts/verify/verify_all.sh",
+    "smoke:tunnel": "node scripts/smoke-tunnel.mjs",
+
     "codex:post-pull": "node scripts/codex-workflow.js post-pull",
     "codex:dev": "node scripts/codex-workflow.js dev",
     "codex:hybrid": "node scripts/codex-workflow.js hybrid",
     "codex:build": "node scripts/codex-workflow.js build",
     "codex:verify": "node scripts/codex-workflow.js verify",
-    "lint": "node scripts/npm-safe.mjs -w apps/web run lint",
-    "format": "deno fmt apps supabase scripts db docs",
-    "typecheck": "node scripts/npm-safe.mjs -w apps/web run typecheck",
-    "review": "python -m pytest algorithms/python/tests/test_review_and_optimize.py",
-    "debug": "NODE_OPTIONS='--inspect' node scripts/npm-safe.mjs run dev",
-    "preview": "node scripts/npm-safe.mjs run dev",
-    "upload-assets": "node scripts/upload-assets.js",
-    "upload-assets:watch": "chokidar '_static/**/*' -c 'node scripts/npm-safe.mjs run upload-assets'",
+
     "docs:summary": "deno run -A scripts/generate-repo-summary.ts",
     "docs:toc": "tsx scripts/docs/update-toc.ts README.md docs/dynamic-capital-playbook.md docs/dynamic-capital-wisdom-playbook.md docs/api-documentation.md",
     "docs:organize": "$(bash scripts/deno_bin.sh) run -A scripts/repo-file-organizer.ts",
     "docs:catalog": "deno run -A scripts/generate-docs-organizer.ts",
     "docs:project-scan": "$(bash scripts/deno_bin.sh) run -A scripts/project/generate-project-scan.ts",
     "docs:whitepapers": "tsx scripts/whitepaper/generate.ts",
-    "drizzle:migrations:validate": "deno run -A scripts/validate-drizzle-migrations.ts",
+
     "github:scan-conflicts": "tsx scripts/github/scan-conflicts.ts",
     "proj:collect": "tsx scripts/project/collect-conventional-commits.ts",
     "proj:notes": "tsx scripts/project/generate-release-notes.ts",
@@ -50,36 +60,40 @@
     "proj:projects": "tsx scripts/project/projects-v2-update.ts",
     "proj:announce": "tsx scripts/project/release-announcer.ts",
     "proj:update-all": "npm run proj:collect && npm run proj:notes && npm run proj:readme && npm run proj:features && npm run proj:projects && npm run proj:announce",
-    "test": "node scripts/check-static-homepage.js && deno test --sloppy-imports --no-lock --no-npm --node-modules-dir=false --unsafely-ignore-certificate-errors -A --no-check",
-    "verify": "bash scripts/verify/verify_all.sh",
-    "smoke:tunnel": "node scripts/smoke-tunnel.mjs",
-    "audit": "npm audit",
-    "audit:fix": "npm audit fix",
+
     "sync-env": "deno run -A scripts/sync-env.ts",
     "env:validate": "tsx scripts/env/validate.ts",
     "env:sync": "tsx scripts/env/sync.ts",
     "env:report": "tsx scripts/env/report.ts",
-    "scan:checklists": "tsx scripts/scan-checklists.ts",
-    "crawlers:install": "node scripts/install-crawlers.mjs",
-    "do:sync-site": "node scripts/digitalocean/sync-site-config.mjs",
-    "do:sync-cdn": "node scripts/digitalocean/sync-cdn-config.mjs",
-    "doctl:sync-site": "node scripts/doctl/sync-site-config.mjs",
-    "checklists": "node scripts/run-checklists.js",
-    "go-live": "node scripts/run-checklists.js --checklist go-live",
-    "go-live--dry-run": "node scripts/run-checklists.js --checklist go-live --dry-run",
-    "export": "node scripts/npm-safe.mjs run build",
-    "output": "node scripts/npm-safe.mjs -w apps/web run copy-static",
+    "tunnel:functions": "node scripts/ngrok-http.mjs",
+
+    "drizzle:migrations:validate": "deno run -A scripts/validate-drizzle-migrations.ts",
     "supabase:start": "supabase start",
     "supabase:stop": "supabase stop",
     "migrate:gen": "supabase migration new",
     "migrate:apply": "supabase migration up",
     "supabase:functions:deploy": "supabase functions deploy --project-ref $SUPABASE_PROJECT_REF --password $SUPABASE_DB_PASSWORD",
+
+    "upload-assets": "node scripts/upload-assets.js",
+    "upload-assets:watch": "chokidar '_static/**/*' -c 'node scripts/npm-safe.mjs run upload-assets'",
+    "output": "node scripts/npm-safe.mjs -w apps/web run copy-static",
     "screenshot:install": "npx playwright install --with-deps",
     "screenshot:preview": "npx playwright show-report",
-    "tunnel:functions": "node scripts/ngrok-http.mjs",
+
+    "scan:checklists": "tsx scripts/scan-checklists.ts",
+    "checklists": "node scripts/run-checklists.js",
+    "go-live": "node scripts/run-checklists.js --checklist go-live",
+    "go-live--dry-run": "node scripts/run-checklists.js --checklist go-live --dry-run",
+
+    "do:sync-site": "node scripts/digitalocean/sync-site-config.mjs",
+    "do:sync-cdn": "node scripts/digitalocean/sync-cdn-config.mjs",
+    "doctl:sync-site": "node scripts/doctl/sync-site-config.mjs",
+
     "ton:generate-adnl": "tsx tools/ton/generate-adnl.ts",
     "ton:site-status": "tsx tools/ton/check-site-status.ts",
-    "ton:mainnet-status": "tsx tools/ton/check-mainnet-status.ts"
+    "ton:mainnet-status": "tsx tools/ton/check-mainnet-status.ts",
+
+    "crawlers:install": "node scripts/install-crawlers.mjs"
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.10.0",
