--- a/supabase/functions/miniapp/package.json
+++ b/supabase/functions/miniapp/package.json
@@ -9,23 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.74.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "@supabase/supabase-js": "^2.74.0",
-    "lucide-react": "^0.544.0",
-    "clsx": "^2.1.1",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.4.20",
-    "tailwindcss": "^3.4.1",
+    "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.4.20"
   },
   "overrides": {
     "esbuild": "^0.25.10"
