Add automation scripts for docs, knowledge base, and edge deployments

--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "scripts": {
     "build": "npm run build:web && npm run build:landing",
+    "build:all": "npm run build && npm run build:miniapp",
     "build:tooling": "node scripts/build-tooling.mjs",
     "build:landing": "node scripts/npm-safe.mjs -w apps/landing run build",
     "build:web": "node scripts/npm-safe.mjs -w apps/web run build",
     "build:dynamic-ai": "node scripts/dynamic-ai-phased-build.mjs",
     "build:miniapp": "bash scripts/build-miniapp.sh",
     "build:dev": "vite build --mode development",
+    "build:legacy": "node lovable-build.js",
+    "analyze": "ANALYZE=true node scripts/npm-safe.mjs -w apps/web run build",
     "start": "npm run start:web",
     "start:web": "node scripts/npm-safe.mjs -w apps/web run start",
     "start:do": "HOST=0.0.0.0 HOSTNAME=0.0.0.0 NODE_ENV=production node apps/web/.next/standalone/apps/web/server.js",
@@ -35,6 +38,7 @@
     "preview": "npm run dev",
     "upload-assets": "node scripts/upload-assets.js",
     "upload-assets:watch": "chokidar '_static/**/*' -c 'npm run upload-assets'",
+    "docs:export": "tsx scripts/docs/export.ts",
     "docs:summary": "deno run -A scripts/generate-repo-summary.ts",
     "docs:toc": "tsx scripts/docs/update-toc.ts README.md docs/dynamic-capital-playbook.md docs/dynamic-capital-wisdom-playbook.md docs/api-documentation.md",
     "docs:organize": "$(bash scripts/deno_bin.sh) run -A scripts/repo-file-organizer.ts",
@@ -50,6 +54,10 @@
     "proj:projects": "tsx scripts/project/projects-v2-update.ts",
     "proj:announce": "tsx scripts/project/release-announcer.ts",
     "proj:update-all": "npm run proj:collect && npm run proj:notes && npm run proj:readme && npm run proj:features && npm run proj:projects && npm run proj:announce",
+    "chunk:text": "tsx scripts/knowledge_base/chunk-text.ts",
+    "embeddings:build": "tsx scripts/knowledge_base/run-embeddings.ts build",
+    "embeddings:refresh": "tsx scripts/knowledge_base/run-embeddings.ts refresh",
+    "lint:kb": "tsx scripts/knowledge_base/lint-kb.ts",
     "test": "node scripts/check-static-homepage.js && deno test --sloppy-imports --no-lock --no-npm --node-modules-dir=false --unsafely-ignore-certificate-errors -A --no-check",
     "verify": "bash scripts/verify/verify_all.sh",
     "smoke:tunnel": "node scripts/smoke-tunnel.mjs",
@@ -65,6 +73,8 @@
     "do:sync-cdn": "node scripts/digitalocean/sync-cdn-config.mjs",
     "doctl:sync-site": "node scripts/doctl/sync-site-config.mjs",
     "checklists": "node scripts/run-checklists.js",
+    "sync:onedrive": "tsx scripts/onedrive/sync.ts",
+    "generate:route": "tsx scripts/project/generate-route.ts",
     "go-live": "node scripts/run-checklists.js --checklist go-live",
     "go-live--dry-run": "node scripts/run-checklists.js --checklist go-live --dry-run",
     "export": "npm run build",
@@ -74,6 +84,10 @@
     "migrate:gen": "supabase migration new",
     "migrate:apply": "supabase migration up",
     "supabase:functions:deploy": "supabase functions deploy --project-ref $SUPABASE_PROJECT_REF --password $SUPABASE_DB_PASSWORD",
+    "deploy:edge": "tsx scripts/supabase/run-edge-deploy.ts all",
+    "edge:deploy:core": "tsx scripts/supabase/run-edge-deploy.ts core",
+    "edge:deploy:ops": "tsx scripts/supabase/run-edge-deploy.ts ops",
+    "serve:functions": "tsx scripts/supabase/serve-functions.ts",
     "screenshot:install": "npx playwright install --with-deps",
     "screenshot:preview": "npx playwright show-report",
     "tunnel:functions": "node scripts/ngrok-http.mjs",
