--- a/supabase/functions/miniapp/package.json
+++ b/supabase/functions/miniapp/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@types/qrcode": "^1.5.5",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
