chore: update tonconnect manifest url

--- a/apps/web/public/tonconnect-manifest.json
+++ b/apps/web/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://dynamic.capital",
+  "url": "https://dynamiccapital.ton",
   "name": "Dynamic Capital",
-  "iconUrl": "https://dynamic.capital/icon-mark.svg"
+  "iconUrl": "https://dynamiccapital.ton/icon-mark.svg"
 }
