--- a/dynamic-capital-ton/apps/miniapp/public/tonconnect-manifest.json
+++ b/dynamic-capital-ton/apps/miniapp/public/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
-  "url": "https://dynamic.capital",
+  "url": "https://dynamiccapital.ton",
   "name": "Dynamic Capital",
-  "iconUrl": "https://dynamic.capital/icon-mark.svg",
-  "termsOfUseUrl": "https://dynamic.capital/terms",
-  "privacyPolicyUrl": "https://dynamic.capital/privacy"
+  "iconUrl": "https://dynamiccapital.ton/icon-mark.svg",
+  "termsOfUseUrl": "https://dynamiccapital.ton/terms",
+  "privacyPolicyUrl": "https://dynamiccapital.ton/privacy"
 }
