--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
-  "url": "https://dynamic-capital.lovable.app",
+  "url": "https://dynamiccapital.ton",
   "name": "Dynamic Capital",
-  "iconUrl": "https://dynamic-capital.lovable.app/icon-mark.svg",
-  "termsOfUseUrl": "https://dynamic-capital.lovable.app/terms",
-  "privacyPolicyUrl": "https://dynamic-capital.lovable.app/privacy"
+  "iconUrl": "https://dynamiccapital.ton/icon-mark.svg",
+  "termsOfUseUrl": "https://dynamiccapital.ton/terms",
+  "privacyPolicyUrl": "https://dynamiccapital.ton/privacy"
 }
