--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
     "tunnel:functions": "node scripts/ngrok-http.mjs",
     "ton:generate-adnl": "tsx tools/ton/generate-adnl.ts",
     "ton:site-status": "tsx tools/ton/check-site-status.ts",
-    "ton:mainnet-status": "tsx tools/ton/check-mainnet-status.ts"
+    "ton:mainnet-status": "tsx tools/ton/check-mainnet-status.ts",
+    "ton:build-verifier": "$(bash scripts/deno_bin.sh) run -A dynamic-capital-ton/apps/tools/build-ton-verifier.ts"
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.10.0",
