Fix DCT market data aggregation tests

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -45,3 +45,13 @@ EXNESS_MT5_LOGIN=
 EXNESS_MT5_PASSWORD=
 EXNESS_MT5_SERVER=
 TELEGRAM_BOT_TOKEN=
+
+# Sample node orchestration configs consumed by tests and local tooling
+NODE_CONFIG__DYNAMIC_HEDGE={"type":"processing","enabled":true,"interval_sec":300,"dependencies":["ton-network-health","ton-feature-engineer"],"outputs":["hedge-signals"],"metadata":{"description":"Hedge execution sample"},"weight":1}
+NODE_CONFIG__HUMAN_ANALYSIS={"type":"community","enabled":false,"interval_sec":900,"dependencies":["ton-ops-briefing"],"outputs":["human-insights"],"metadata":{"description":"Placeholder for analyst review"},"weight":null}
+NODE_CONFIG__TON_EXECUTION_PLANNER={"type":"processing","enabled":true,"interval_sec":120,"dependencies":["ton-liquidity-ingestion"],"outputs":["execution-plan"],"metadata":{"description":"Generate TON execution plans"},"weight":2}
+NODE_CONFIG__TON_FEATURE_ENGINEER={"type":"processing","enabled":true,"interval_sec":600,"dependencies":["ton-liquidity-ingestion"],"outputs":["feature-store"],"metadata":{"description":"Derive features from TON data"},"weight":1}
+NODE_CONFIG__TON_LIQUIDITY_INGESTION={"type":"ingestion","enabled":true,"interval_sec":60,"dependencies":[],"outputs":["liquidity-snapshots"],"metadata":{"description":"Fetch TON liquidity metrics"},"weight":1}
+NODE_CONFIG__TON_NETWORK_HEALTH={"type":"processing","enabled":true,"interval_sec":300,"dependencies":["ton-liquidity-ingestion"],"outputs":["network-health"],"metadata":{"description":"Monitor TON network health"},"weight":1}
+NODE_CONFIG__TON_OPS_BRIEFING={"type":"policy","enabled":true,"interval_sec":900,"dependencies":["ton-network-health"],"outputs":["ops-briefing"],"metadata":{"description":"Operational status digest"},"weight":1}
+NODE_CONFIG__TON_WALLET_AUDIT={"type":"processing","enabled":true,"interval_sec":3600,"dependencies":["ton-liquidity-ingestion"],"outputs":["wallet-audit"],"metadata":{"description":"Audit TON wallets"},"weight":1}
