Improve TON predeploy verifier typing

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "screenshot:preview": "npx playwright show-report",
     "tunnel:functions": "node scripts/ngrok-http.mjs",
     "ton:generate-adnl": "tsx tools/ton/generate-adnl.ts",
+    "ton:predeploy-verify": "tsx tools/ton/predeploy-verify.ts",
     "ton:site-status": "tsx tools/ton/check-site-status.ts",
     "ton:mainnet-status": "tsx tools/ton/check-mainnet-status.ts",
     "ton:build-verifier": "$(bash scripts/deno_bin.sh) run -A dynamic-capital-ton/apps/tools/build-ton-verifier.ts"
