--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "ton:generate-adnl": "tsx tools/ton/generate-adnl.ts",
     "ton:site-status": "tsx tools/ton/check-site-status.ts",
     "ton:mainnet-status": "tsx tools/ton/check-mainnet-status.ts",
+    "ton:build-site-predeploy": "tsx tools/ton/build-site-predeploy.ts",
     "ton:build-verifier": "$(bash scripts/deno_bin.sh) run -A dynamic-capital-ton/apps/tools/build-ton-verifier.ts"
   },
   "dependencies": {
